--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
+            <a class="portfolio-link project-image" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/moodmusic.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link img-thumbnail" href="#portfolioModal2" data-toggle="modal">
+            <a class="portfolio-link project-image" href="#portfolioModal2" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
@@ -144,9 +144,8 @@
             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
           </div>
           <div class="col-lg-8 mx-auto text-center">
-            <a href="#" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i>
-              Download Theme
+            <a href="https://uncc-csm.symplicity.com/profiles/muhammad.chaudhry2" target="blank" class="btn btn-lg btn-outline">
+              Hire-a-niner Profile
             </a>
           </div>
         </div>
@@ -281,28 +280,11 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Mood Music</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cabin.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
+                  <img class="img-fluid img-centered" src="img/portfolio/moodmusic.png" alt="">
+                  <p>Designed a web application that accepts an image URL and runs through face recognition API to display emotional state based on the image and recommends the list of songs using last.fm API. Developed using HTML and CSS. Link to the 
+                    <a href="https://rlawton512.github.io/project_1/ ">site.</a></p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -330,23 +312,6 @@
                   <img class="img-fluid img-centered" src="img/portfolio/crystalscollectors.gif" alt="">
                   <p>Developed the game by using javascript and jQuery. The game starts with a random number, total score, and four crystals. The user will win by matching total score to the random number but loses if score goes above the random number. The values of crystals are hidden until clicked and will change each time game starts. Link to the 
                     <a href="https://chaudhry8106.github.io/week-4-game/">gamesite.</a></p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
