--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+            <a class="portfolio-link project-image" href="#portfolioModal3" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/portfolio/vigor.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -114,7 +114,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="img/portfolio/burger.gif" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -253,7 +253,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; Your Website 2017
+              Copyright &copy; Muhammad Chaudhry 2017
             </div>
           </div>
         </div>
@@ -284,7 +284,7 @@
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/moodmusic.png" alt="">
                   <p>Designed a web application that accepts an image URL and runs through face recognition API to display emotional state based on the image and recommends the list of songs using last.fm API. Developed using HTML and CSS. Link to the 
-                    <a href="https://rlawton512.github.io/project_1/ ">site.</a></p>
+                    <a href="https://machaudhry.github.io/moodmusic/" target="blank">site.</a></p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -311,7 +311,7 @@
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/crystalscollectors.gif" alt="">
                   <p>Developed the game by using javascript and jQuery. The game starts with a random number, total score, and four crystals. The user will win by matching total score to the random number but loses if score goes above the random number. The values of crystals are hidden until clicked and will change each time game starts. Link to the 
-                    <a href="https://chaudhry8106.github.io/week-4-game/">gamesite.</a></p>
+                    <a href="https://machaudhry.github.io/crystalscollectors/" target="blank">gamesite.</a></p>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -334,28 +334,13 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Vigor Charlotte</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/circus.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
-                    </li>
-                    <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
-                    </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
-                    </li>
-                  </ul>
+                  <img class="img-fluid img-centered" src="img/portfolio/vigor.png" alt="">
+                  <p>Web application specially designed for a local massage center that provides its customer access to information about service offered, and also able to make appointments online with select therapists.
+                  </br><a href="https://vigor-charlotte.herokuapp.com" target="blank">Link to the website</a>
+                  </br><a href="https://github.com/machaudhry/vigor-charlotte" target="blank">Link to github repository</a></p>
+
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
