--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <div class="row">
 
-	          <div class="col-md-4 mb-3 mb-md-0">
+	          <!-- <div class="col-md-4 mb-3 mb-md-0">
 	            <div class="card py-4 h-100">
 	              <div class="card-body text-center">
 	                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
@@ -220,28 +220,28 @@
 	                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
 	              </div>
 	            </div>
-	          </div>
+	          </div> -->
 
-	          <div class="col-md-4 mb-3 mb-md-0">
+	          <div class="col-md-6 mb-3 mb-md-0">
 	            <div class="card py-4 h-100">
 	              <div class="card-body text-center">
 	                <i class="fas fa-envelope text-primary mb-2"></i>
 	                <h4 class="text-uppercase m-0">Email</h4>
 	                <hr class="my-4">
 	                <div class="small text-black-50">
-	                  <a href="#">hello@yourdomain.com</a>
+	                  <a href="#">chaudhry.muhammad@icloud.com</a>
 	                </div>
 	              </div>
 	            </div>
 	          </div>
 
-	          <div class="col-md-4 mb-3 mb-md-0">
+	          <div class="col-md-6 mb-3 mb-md-0">
 	            <div class="card py-4 h-100">
 	              <div class="card-body text-center">
 	                <i class="fas fa-mobile-alt text-primary mb-2"></i>
 	                <h4 class="text-uppercase m-0">Phone</h4>
 	                <hr class="my-4">
-	                <div class="small text-black-50">+1 (555) 902-8832</div>
+	                <div class="small text-black-50">+1 (980) 354-4130</div>
 	              </div>
 	            </div>
 	          </div>
