--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
         <div class="row justify-content-center">
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
+          <a href="https://uncc-csm.symplicity.com/profiles/muhammad.chaudhry2" target="blank" class="mx-2">
+            <i class="fas fa-university"></i>
           </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://www.linkedin.com/in/ma-chaudhry/" target="blank" class="mx-2">
+            <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://github.com/machaudhry" target="blank" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
